--- a/web/tuning/style.css
+++ b/web/tuning/style.css
@@ -26,7 +26,12 @@ h1 {
   margin-bottom: 0;
 }
 
-a {
+a, #error {
   display: block;
   margin: 1rem 0 1rem 0;
+}
+
+#error {
+  color: red;
+  font-weight: bold;
 }
